--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><i class="fa-solid fa-bag-shopping"></i></li>
+            <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
+            <a id="close" href="#"><i class="far fa-times-circle"></i></a>
         </ul>
+        <div id="mobile">
+            <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+            <i id="bar" class="fas fa-outdent"></i>
+        </div>
     </section>
 
     <section id="hero">
@@ -63,7 +68,7 @@
                 <img src="img/products/f1.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Unique Design Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -71,7 +76,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$98</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
@@ -81,7 +86,7 @@
                 <img src="img/products/f2.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Trendy Design Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -89,7 +94,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$55</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
@@ -99,7 +104,7 @@
                 <img src="img/products/f3.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Cartoon Design Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -117,7 +122,7 @@
                 <img src="img/products/f4.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Flower Design Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -125,7 +130,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$59</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
@@ -134,7 +139,7 @@
                 <img src="img/products/f5.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Premium Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -142,7 +147,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$68</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>  
@@ -151,7 +156,7 @@
                 <img src="img/products/f6.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Premium Quality Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -159,7 +164,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$99</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
@@ -168,7 +173,7 @@
                 <img src="img/products/f7.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Simple Ladies Pant</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -176,7 +181,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$98</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
@@ -185,7 +190,7 @@
                 <img src="img/products/f8.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Women Tops</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -216,7 +221,7 @@
                 <img src="img/products/n1.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Premium Blue Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -234,7 +239,7 @@
                 <img src="img/products/n2.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Half Sleeve Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -242,7 +247,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$68</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
@@ -252,7 +257,7 @@
                 <img src="img/products/n3.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Cartoon Design Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -260,7 +265,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$98</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
@@ -270,7 +275,7 @@
                 <img src="img/products/n4.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Premium Check Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -278,7 +283,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$75</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
@@ -287,7 +292,7 @@
                 <img src="img/products/n5.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Best Mens Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -295,7 +300,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$55</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>  
@@ -304,7 +309,7 @@
                 <img src="img/products/n6.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Three-Quater Pant</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -312,7 +317,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$89</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
@@ -321,7 +326,7 @@
                 <img src="img/products/n7.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Formal Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -329,7 +334,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$99</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
@@ -338,7 +343,7 @@
                 <img src="img/products/n8.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <h5>Single Color Shirt</h5>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -346,7 +351,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <h4>$78</h4>
+                    <h4>$100</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
@@ -356,7 +361,7 @@
 
     <section id="sm-banner" class="section-p1">
         <div class="banner-box">
-            <h4>Crazy Deals</h4>
+            <h4>crazy deals</h4>
             <h2>buy 1 get 1 free</h2>
             <span>The best classic dress is on sale at cara</span>
             <button class="white">Learn More</button>
@@ -395,13 +400,13 @@
         </div>
     </section>
 
-    <footer class="section-p1">
+    <footer class="section-p1 footer">
         <div class="col">
             <img class="logo" src="img/logo.png" alt="">
             <h4>Contact</h4>
             <p><b>Address:</b> 562 Welligton Road, Street 32, San Francisco</p>
             <p><b>Phone:</b> +01 2222 365 / (+91) 01 2345 6789</p>
-            <p><b>Hours:</b> 10:00 - 18:00, Mon - Sat</p>
+            <p id="mar"><b>Hours:</b> 10:00 - 18:00, Mon - Sat</p>
             <div class="follow">
                 <h4>Follow us</h4>
                 <div class="icons">
@@ -441,7 +446,7 @@
         </div>
 
         <div class="copyright">
-            <p>&copy 2021, Tech2 etc - HTML CSS Ecommerce Template</p>
+            <p>&copy 2024, M.A. Asad - HTML CSS JS Ecommerce Project</p>
         </div>
     </footer>
     
