--- a/shop.html
+++ b/shop.html
@@ -10,8 +10,8 @@
     <section class="header">
         <img src="img/logo.png" alt="logo" class="logo">
         <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="shop.html">Shop</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="shop.html">Shop</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -24,44 +24,12 @@
         </div>
     </section>
 
-    <section id="hero">
-        <h4>Trade-in-offer</h4>
-        <h2>Super value deals</h2>
-        <h1>On all products</h1>
+    <section id="page-header">
+        <h2>#stay home</h2>
         <p>Save more with coupons & up to 70% off!</p>
-        <button>Shop Now</button>
-    </section>
-
-    <section id="feature" class="section-p1">
-        <div class="f-box">
-            <img src="img/features/f1.png" alt="">
-            <h6>Free Shipping</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f2.png" alt="">
-            <h6> Online Order</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f3.png" alt="">
-            <h6>Save Money</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f4.png" alt="">
-            <h6>Promotions</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f5.png" alt="">
-            <h6>Happy Sell</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f6.png" alt="">
-            <h6>F24/7Support</h6>
-        </div>
     </section>
 
     <section id="product1" class="section-p1">
-        <h2>Featured Products</h2>
-        <p>Summer Collection New Morden Design</p>
         <div class="p-container">
             <!-- product 1 -->
             <div class="p" onclick="loadDetail()">
@@ -202,20 +170,6 @@
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
-
-        </div>
-    </section>
-
-    <section class="section-m1" id="banner">
-        <h4>Repair Services</h4>
-        <h2>Up to <span>70% off</span>-All t-Shirt & Accessories</h2>
-        <button class="normal">Expore More</button>
-    </section>
-
-    <section id="product1" class="section-p1">
-        <h2>New Arrivals</h2>
-        <p>Summer Collection New Morden Design</p>
-        <div class="p-container">
             <!-- product 1 -->
             <div class="p" onclick="loadDetail()">
                 <img src="img/products/n1.jpg" alt="">
@@ -233,7 +187,6 @@
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
-
             <!-- product 2 -->
             <div class="p" onclick="loadDetail()">
                 <img src="img/products/n2.jpg" alt="">
@@ -251,7 +204,6 @@
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
-
             <!-- product 3 -->
             <div class="p" onclick="loadDetail()">
                 <img src="img/products/n3.jpg" alt="">
@@ -269,7 +221,6 @@
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
-
             <!-- product 4 -->
             <div class="p" onclick="loadDetail()">
                 <img src="img/products/n4.jpg" alt="">
@@ -355,38 +306,13 @@
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-plus cart"></i></a>
             </div>
-
         </div>
     </section>
 
-    <section id="sm-banner" class="section-p1">
-        <div class="banner-box">
-            <h4>crazy deals</h4>
-            <h2>buy 1 get 1 free</h2>
-            <span>The best classic dress is on sale at cara</span>
-            <button class="white">Learn More</button>
-        </div>
-        <div class="banner-box box-2">
-            <h4>spring/summer</h4>
-            <h2>buy 1 get 1 free</h2>
-            <span>The best classic dress is on sale at cara</span>
-            <button class="white">Collection</button>
-        </div>
-    </section>
-
-    <section id="tx-banner">
-        <div class="banner-box">
-            <h2>SEASONAL SALE</h2>
-            <h3>Winter Collection -50% off</h3>
-        </div>
-        <div class="banner-box box-2">
-            <h2>NEW COLLECTION</h2>
-            <h3>Winter/Summer 2024</h3>
-        </div>
-        <div class="banner-box box-3">
-            <h2>T-SHIRTS</h2>
-            <h3>New Trendy Prints</h3>
-        </div>
+    <section id="pagination" class="section-p1">
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
     </section>
 
     <section id="newsletters" class="section-p1 section-m1">
