--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     <section id="contact-details" class="section-p1">
         <div class="details">
             <span>GET IN TOUCH</span>
-            <h2>Visit one of our agency location or contact us today</h2>
+            <h2>Visit One Of Our Agency Location Or Contact Us Today.</h2>
             <h3>Head office</h3>
             <div class="contact">
                 <li>
